# RetroDebugger

./: .clang-format  .cmake-format.yaml  CMakeLists.txt  README.md  RetroDebuggerConfig.cmake  build_examples.sh  conanfile.txt
.github/workflows/: ci.yml  codeql-analysis.yml
cmake/: BuildInfo.cmake  BuildInfo.h.in  Install.cmake  NamedType.cmake  Testing.cmake  fmt.cmake  get_cpm.cmake  tinyxml2.cmake
cmake/dependencies/: NamedType.cmake  fmt.cmake  gtest.cmake  magic_enum.cmake  tinyxml2.cmake
configured_files/: CMakeLists.txt  Config.h.in  RetroDebugger_config.h.in
fuzz_test/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/ConditionInterpreter/: CMakeLists.txt  README.md
src/ConditionInterpreter/Include/: ConditionInterpreter.h
src/ConditionInterpreter/Source/: ConditionInterpreter.cpp  ConditionInterpreter.h  Expr.cpp  Expr.h  IAstVisitor.h  IExpr.h  Interpreter.cpp  Interpreter.h  NumericType.h  Parser.cpp  Parser.h  Report.cpp  Report.h  RuntimeError.h  Scanner.cpp  Scanner.h  StringVisitor.h  Token.cpp  Token.h  TokenType.cpp  TokenType.h  Types.h
src/ConditionInterpreter/Source/Interpreter/: Interpreter.cpp  Interpreter.h
src/ConditionInterpreter/Source/Parser/: Parser.h
src/ConditionInterpreter/Source/Scanner/: Expr.cpp  Expr.h  IAstVisitor.h  IExpr.h  Scanner.cpp  Scanner.h  StringVisitor.h
src/ConditionInterpreter/Source/Token/: Token.cpp  Token.h  TokenType.h
src/ConditionInterpreter/Tests/: CMakeLists.txt  ConditionInterpreterTests.cpp  ExprTests.cpp  InterpreterExpressionTests.cpp  ParserExpressionTests.cpp  ScannerTests.cpp
src/Console/: CMakeLists.txt
src/Console/source/: ConsoleInterpreter.cpp  ConsoleInterpreter.h  DebuggerConsole.cpp  DebuggerInterpreter.cpp  DebuggerInterpreter.h  DebuggerPrintFormat.cpp  DebuggerPrintFormat.h  DebuggerStringParser.cpp  DebuggerStringParser.h
src/Debugger/: CMakeLists.txt
src/Debugger/interface/: CMakeLists.txt
src/Debugger/interface/include/: DebuggerCommon.h
src/Debugger/source/: BreakpointManager.cpp  BreakpointManager.h  Debugger.cpp  Debugger.h  DebuggerCallbacks.cpp  DebuggerCallbacks.h  DebuggerOperations.cpp  DebuggerOperations.h  RetroDebugger.cpp  RetroDebugger.h
src/Debugger/tests/: BreakpointManagerTests.cpp  CMakeLists.txt  DebuggerOperationsTests.cpp  DebuggerStringParserTests.cpp
src/Mocks/: CMakeLists.txt
src/Mocks/include/: MockDebuggerCallbacks.h
src/RetroDebugger/: CMakeLists.txt  RetroDebuggerApi.cpp  pch.h
src/RetroDebugger/Common/: CMakeLists.txt
src/RetroDebugger/Common/include/: DebuggerCommon.h
src/RetroDebugger/Debugger/: CMakeLists.txt
src/RetroDebugger/Debugger/include/: BreakpointManager.h  Debugger.h  DebuggerOperations.h
src/RetroDebugger/Debugger/source/: BreakpointManager.cpp  Debugger.cpp  DebuggerOperations.cpp
src/RetroDebugger/DebuggerCallbacks/: CMakeLists.txt
src/RetroDebugger/DebuggerCallbacks/include/: DebuggerCallbacks.h
src/RetroDebugger/DebuggerCallbacks/source/: DebuggerCallbacks.cpp
src/RetroDebugger/StringInterpreter/: CMakeLists.txt
src/RetroDebugger/StringInterpreter/include/: DebuggerConsole.h  DebuggerInterpreter.h  DebuggerPrintFormat.h  DebuggerStringParser.h
src/RetroDebugger/StringInterpreter/source/: DebuggerConsole.cpp  DebuggerInterpreter.cpp  DebuggerPrintFormat.cpp
src/RetroDebugger/XmlParser/: CMakeLists.txt
src/RetroDebugger/XmlParser/include/: DebuggerXmlParser.h  XmlElementParser.h
src/RetroDebugger/XmlParser/source/: DebuggerXmlParser.cpp  XmlElementParser.cpp
src/RetroDebugger/include/: DebuggerCommon.h  DebuggerInterpreter.h  DebuggerOperations.h  DebuggerXmlParser.h  RetroDebugger.h  RetroDebuggerApi.h  XmlElementParser.h
src/RetroDebugger/source/: BreakpointManager.cpp  DebuggerInterpreter.cpp  DebuggerOperations.cpp  DebuggerPrintFormat.cpp  DebuggerXmlParser.cpp  RetroDebugger.cpp  XmlElementParser.cpp
src/RetroDebugger/tests/: BreakpointManagerTests.cpp  CMakeLists.txt  DebuggerOperationsTests.cpp  DebuggerXmlParserTests.cpp  XmlElementParserTests.cpp
src/RetroDebuggerCommon/: CMakeLists.txt
src/RetroDebuggerCommon/include/: RetroDebuggerCallbackDefines.h  RetroDebuggerCommon.h
src/XmlParser/: CMakeLists.txt
src/XmlParser/source/: XmlElementParser.cpp  XmlParserException.cpp  XmlParserException.h
src/assets/: CMakeLists.txt  GameboyOperationsDebugger.xml  RetroDebuggerTests_assets.h.in  example_operations.xml  valid_bare_min.xml
src/include/: CMakeLists.txt  DebuggerApi.h  DebuggerCommon.h  RetroDebuggerApi.h  RetroDebuggerCommon.h
src/interfaces/: CMakeLists.txt
src/interfaces/include/: DebuggerError.h  IDebuggerCallbacks.h  RetroDebuggerCommon.h
src/source/: BreakpointManager.cpp  BreakpointManager.h  CMakeLists.txt  Debugger.cpp  Debugger.h  DebuggerApi.cpp  DebuggerApi.h  DebuggerCallbacks.cpp  DebuggerCallbacks.h  DebuggerCommon.h  DebuggerConsole.cpp  DebuggerConsole.h  DebuggerInterpreter.cpp  DebuggerInterpreter.h  DebuggerOperations.cpp  DebuggerOperations.h  DebuggerPrintFormat.cpp  DebuggerPrintFormat.h  DebuggerStringParser.cpp  DebuggerStringParser.h  DebuggerXmlParser.cpp  DebuggerXmlParser.h  RetroDebugger.cpp  RetroDebugger.h  RetroDebuggerApi.cpp  XmlElementParser.cpp  XmlElementParser.h
src/tests/: BreakpointManagerTests.cpp  CMakeLists.txt  DebuggerApiTests.cpp  DebuggerOperationsTests.cpp  DebuggerStringParserTests.cpp  DebuggerXmlParserTests.cpp  XmlElementParserTests.cpp
test/: CMakeLists.txt  tests.cpp
tests/: CMakeLists.txt  RetroDebuggerExamples.cpp  RetroDebuggerIntegrationTests.cpp  main.cpp
